[tool.poetry]
name = "risk-gpt"
version = "0.1.0"
description = ""
authors = ["Sercan Atalik <sercan@atalik.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.19.16"
streamlit = "^1.28.2"
langchain = "^0.0.340"
duckdb = "^0.9.2"
faker = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
