[tool.poetry]
name = "risk-gpt"
version = "0.1.0"
description = ""
authors = ["Sercan Atalik <sercan@atalik.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.19.16"
streamlit = "^1.28.2"
langchain = "^0.0.352"
duckdb = "^0.9.2"
faker = "^20.1.0"
fastapi = "^0.105.0"
perspective-python = "^2.7.1"
uvicorn = "^0.24.0.post1"
websockets = "^12.0"
orjson = "^3.9.10"
pymongo = "^4.6.1"
langserve = "^0.0.36"
openai = "^1.6.0"
sse-starlette = "^1.8.2"
python-multipart = "^0.0.6"
langchain-experimental = "^0.0.47"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
